cluster/test/002-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
#  externalTrafficPolicy: Local
#  sessionAffinity: None
  type: ClusterIP
